# cango.utility.result_code

./: CMakeLists.txt  README.md
include/cango/utility/: result_code.hpp
test/: test.cpp
